update staging to 951a4f9

--- a/cn/index.html
+++ b/cn/index.html
@@ -125,6 +125,9 @@
                 <h2>高级分布式协议与应用</h2>
                 <p>String实验室一个密码学和分布式计算的研发、孵化和投资机构.</p>
             </div>
+            <a class="section-link" href="./#" data-href="#section-work">
+                <div>&darr;</div>
+            </a>
         </section>
         <section id="section-work" class="page-section section nomargin dark bg-stringlabs">
             <a name="projects"></a>
@@ -144,7 +147,7 @@
                                 <a href="http://dfinity.network/">http://dfinity.network</a>
                             </p>
                         </div>
-                        <div class="subtitle link">find out more</div>
+                        <div class="subtitle link"></div>
                     </div>
                 </div>
                 <div class="col_one_third nobottommargin">
@@ -168,7 +171,7 @@
                                     Phi发布会视频 (以太坊DevCon开发者大会)</a>
                             </p>
                         </div>
-                        <div class="subtitle link">find out more</div>
+                        <div class="subtitle link"></div>
                     </div>
                 </div>
                 <div class="col_one_third nobottommargin col_last">
@@ -184,17 +187,24 @@
                                 <a target="_blank" href="https://legalese.com/">String研发奖励项目: Legalese 范式化合约</a>
                             </p>
                         </div>
-                        <div class="subtitle link">find out more</div>
+                        <div class="subtitle link"></div>
                     </div>
                 </div>
                 <div class="clear"></div>
             </div>
+            <a class="section-link" href="./#" data-href="#section-research">
+                <div>&darr;</div>
+            </a>
         </section>
         <section id="section-research" class="page-section section nomargin dark bg-stringlabs-dark full-height">
-
+            <a class="section-link" href="./#" data-href="#section-research-2">
+                <div>&darr;</div>
+            </a>
         </section>
         <section id="section-research-2" class="page-section section nomargin dark bg-stringlabs-dark full-height">
-
+            <a class="section-link" href="./#" data-href="#section-dfinity">
+                <div>&darr;</div>
+            </a>
         </section>
         <section id="section-dfinity" class="page-section section nomargin bg-stringlabs-dark dark full-height">
             <a name="dfinity"></a>
@@ -316,13 +326,18 @@
                  -->
             </div>
             <div class="clear"></div>
+            <a class="section-link" href="./#" data-href="#section-presentations-2">
+                <div>&darr;</div>
+            </a>
         </section>
     </div>
 </section>
 <section id="section-presentations-2" class="page-section section nomargin dark bg-stringlabs-dark full-height">
-
+    <a class="section-link" href="./#" data-href="#section-team">
+        <div>&darr;</div>
+    </a>
 </section>
-<section id="section-team" class="page-section section nomargin dark bg-stringlabs-dark">
+<section id="section-team" class="page-section section nomargin dark bg-stringlabs-dark full-height">
 	<div class="heading-block center">
 		<h2>团队</h2>
 		<p>热爱前沿的密码学和分布式技术吗？加入String推动区块链科学发展吧！</p>
@@ -459,70 +474,15 @@
 			</div>
 		</div>
 		<div class="clear"></div>
-		<div class="row">
-			<div class="col-md-6 bottommargin">
-				<div class="team team-list clearfix">
-					<div class="team-image">
-						<img src="./images/team/shigeo-head1.jpg" alt="Shigeo Mitsunari" style="opacity: 0.5">
-					</div>
-					<div class="team-desc">
-						<div class="team-title"><h4>Shigeo Mitsunari</h4><span>Cryptography</span></div>
-						<div class="team-content">
-							<p>Shigeo is a talented cryptographer with interests in pairing implementations, x86/x64 optimization and machine learning, and the publisher of several academic works. He currently works with Timo evolving a BLS threshold signature library that sits at the core of the Dfinity "threshold relay chain" system. A C++ rockstar!</p>
-						</div>
-						<a href="https://github.com/herumi" class="social-icon si-rounded si-small si-github">
-							<i class="icon-github"></i>
-							<i class="icon-github"></i>
-						</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-6 bottommargin">
-				<div class="team team-list clearfix">
-					<div class="team-image">
-						<img src="./images/team/will-head1.jpg" alt="Prof Will Cong">
-					</div>
-					<div class="team-desc">
-						<div class="team-title"><h4>Prof Will Cong</h4><span>Economics Advisor</span></div>
-						<div class="team-content">
-							<p>Assistant Professor of Finance at Chicago Booth, Will Cong holds positions such as George Shultz Scholar at the Stanford Institute for Economic Policy Research and prizes from the Shmuel Kandel Award in Financial Economics to gold medals in international and national Math contests: a bona fide financial economics maestro!</p>
-						</div>
-						<a href="https://www.linkedin.com/in/linwilliamcong" class="social-icon si-rounded si-small si-linkedin">
-							<i class="icon-linkedin"></i>
-							<i class="icon-linkedin"></i>
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="clear"></div>
-		<div class="row">
-			<div class="col-md-6 bottommargin">
-				<div class="team team-list clearfix">
-					<div class="team-image">
-						<img src="./images/team/houman-head1.jpg" alt="Prof Houman Shadab">
-					</div>
-					<div class="team-desc">
-						<div class="team-title"><h4>Prof Houman Shadab</h4><span>Legal Advisor</span></div>
-						<div class="team-content">
-							<p>Currently a Professor of Law at New York Law School, Houman is a world renowned expert on law relating to cutting-edge fintech, hedge funds and securitization. This has led him to testify to congress on hedge funds and the financial crisis, and to the CFTC on Bitcoin derivatives.</p>
-						</div>
-						<a href="https://twitter.com/HoumanShadab" class="social-icon si-rounded si-small si-twitter">
-							<i class="icon-twitter"></i>
-							<i class="icon-twitter"></i>
-						</a>
-						<a href="https://www.linkedin.com/in/houmanshadab" class="social-icon si-rounded si-small si-linkedin">
-							<i class="icon-linkedin"></i>
-							<i class="icon-linkedin"></i>
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
 	</div>
+    <a class="section-link" href="./#" data-href="#section-investors">
+        <div>&darr;</div>
+    </a>
 </section>
 <section id="section-investors" class="page-section section nomargin dark bg-stringlabs-dark full-height">
-
+    <a class="section-link" href="./#" data-href="#section-hero">
+        <div>&uarr;</div>
+    </a>
 </section>
 <script>
 
@@ -538,9 +498,14 @@
 
             events: [
               {
-                  listener: '.primary-menu-item > a > div',
+                  listener: '.primary-menu-item > a > div, .section-link > div',
                   type: 'click',
-                  handler: 'scrollToAnchor'
+                  handler: 'didClickScrollToLink'
+              },
+              {
+                  listener: '.feature-box .subtitle.link',
+                  type: 'click',
+                  handler: 'didClickProjectLink'
               }
             ],
 
@@ -548,8 +513,14 @@
               return (window.innerWidth < this.config.responsiveBreakpoint);
             },
 
-            scrollToAnchor(staticArgs, event) {
-                return $('html, body').animate({ scrollTop: $($(event.target).parent().data().href).offset().top }, 'slow');
+            didClickProjectLink(staticArgs, event) {
+                return $(event.target).parent().toggleClass('expanded');
+            },
+
+            didClickScrollToLink(staticArgs, event) {
+                event.preventDefault();
+                $('html, body').animate({ scrollTop: $($(event.target).parent().data().href).offset().top }, 'slow');
+                return false;
             },
 
             initDeckLang(lang) {
