--- a/ja/index.html
+++ b/ja/index.html
@@ -44,7 +44,7 @@
 
         <!-- Header
 		============================================= -->
-        <header id="header" class="transparent-header full-header page-section dark pull-left">
+        <header id="header" class="full-header pull-left">
 
             <div id="header-wrap">
 
@@ -131,11 +131,11 @@
         </section>
         <section id="section-work" class="page-section section nomargin dark bg-stringlabs">
             <a name="projects"></a>
-            <div class="container clearfix">
-                <div class="heading-block center">
-                    <h2>事業内容</h2>
-                </div>
-                <div class="col_one_third nobottommargin">
+            <div class="heading-block center">
+                <h2>事業内容</h2>
+            </div>
+            <div class="feature-list clearfix">
+                <div class="feature-item pull-left">
                     <div class="feature-box media-box">
                         <div class="fbox-media">
                             <img src="./images/string/dfinity-logo.png" alt="DFINITY">
@@ -150,7 +150,7 @@
                         <div class="subtitle link"></div>
                     </div>
                 </div>
-                <div class="col_one_third nobottommargin">
+                <div class="feature-item pull-left">
                     <div class="feature-box media-box">
                         <div class="fbox-media">
                             <img src="./images/string/phi-logo.png" alt="PHI">
@@ -174,7 +174,7 @@
                         <div class="subtitle link"></div>
                     </div>
                 </div>
-                <div class="col_one_third nobottommargin col_last">
+                <div class="feature-item pull-left">
                     <div class="feature-box media-box">
                         <div class="fbox-media">
                             <img src="./images/string/other-logo.png" alt="Other" style="opacity:0.7">
@@ -506,7 +506,8 @@
                   listener: '.feature-box .subtitle.link',
                   type: 'click',
                   handler: 'didClickProjectLink'
-                }
+                },
+
             ],
 
             isMobile() {
@@ -533,6 +534,7 @@
 
             // must return `this`
             didLoad() {
+                setTimeout(function() { $('#header').addClass('expanded'); }, 1000);
                 this.events.forEach(event => {
                     document.querySelectorAll(event.listener).forEach(selector => {
                         selector['on' + event.type] = this[event.handler].bind(this, event.staticArgs);
