--- a/index.html
+++ b/index.html
@@ -348,8 +348,20 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
     	</div>
     </section>
 
-    <section id="section-investors" class="page-section section nomargin dark bg-stringlabs-dark full-height">
-        [investors]
+    <section id="section-investors" class="page-section section nomargin dark bg-stringlabs full-height">
+        <div class="heading-block center">
+            <h2>{% t index.investors-title %}</h2>
+        </div>
+        <div class="investors-desc col-md-9">
+            <h2 class="investors-title">
+                Decentralization is a massive movement and technology undertake with so many fascinating pieces to it. There are already many startups, organizations and researchers working on different applications and advancing the core technology.
+            </h2>
+            <div class="investors-content">
+                <p>
+                    We are blessed with a unique cross-discipline team of leading cryptographers, distributed protocols researchers/engineers mathematicians and economists. What particularly interest us are those complex cross-disciplinary problems, that could become the biggest game-changer, common building blocks, and enablers massively accelerating the whole ecosystem.
+                </p>
+            </div>
+        </div>
     </section>
 </div>
 <script>
@@ -466,7 +478,6 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
                     }, this);
                 }, this);
                 $('#section-link').attr({ 'data-href': this.state.sections[1] });
-                requestAnimationFrame(event => { $('html, body').scrollTop(0); });
                 setTimeout(event => { $('#header').addClass('expanded'); }, 750);
                 return this;
             }
