--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 home-link: "#"
 projects-link: "#"
 team-link: "#"
-investors-link: "#"
+investment-link: "#"
 dfinity-link: "#"
 menu-data-href: true
 hero: true
@@ -94,7 +94,9 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
     </section>
 
     <section id="section-research" class="page-section section nomargin dark bg-stringlabs-dark full-height">
-        [research]
+        <div class="heading-block center">
+            <h2>{% t index.navbar-research %}</h2>
+        </div>
     </section>
 
     <section id="section-dfinity" class="page-section section nomargin bg-stringlabs-dark dark full-height">
@@ -348,15 +350,15 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
     	</div>
     </section>
 
-    <section id="section-investors" class="page-section section nomargin dark bg-stringlabs full-height">
+    <section id="section-investment" class="page-section section nomargin dark bg-stringlabs full-height">
         <div class="heading-block center">
-            <h2>{% t index.investors-title %}</h2>
+            <h2>{% t index.navbar-investment %}</h2>
         </div>
-        <div class="investors-desc col-md-9">
-            <h2 class="investors-title">
+        <div class="investment-desc col-md-9">
+            <h2 class="investment-title">
                 Decentralization is a massive movement and technology undertake with so many fascinating pieces to it. There are already many startups, organizations and researchers working on different applications and advancing the core technology.
             </h2>
-            <div class="investors-content">
+            <div class="investment-content">
                 <p>
                     We are blessed with a unique cross-discipline team of leading cryptographers, distributed protocols researchers/engineers mathematicians and economists. What particularly interest us are those complex cross-disciplinary problems, that could become the biggest game-changer, common building blocks, and enablers massively accelerating the whole ecosystem.
                 </p>
@@ -409,7 +411,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
                     '#section-research',
                     '#section-dfinity',
                     '#section-team',
-                    '#section-investors'
+                    '#section-investment'
                 ]
             },
 
